# docs/swagger.yaml
@@ -196,6 +196,48 @@ definitions:
     - captcha_token
     - email_address
     type: object
+  model.UserInfo:
+    properties:
+      create_project:
+        description: 创建的项目
+        items:
+          type: string
+        type: array
+      create_time:
+        description: 注册时间
+        type: string
+      develop_project:
+        description: 参与的项目
+        items:
+          type: string
+        type: array
+      email:
+        description: 邮箱
+        type: string
+      gender:
+        description: 性别 1 男 2 女
+        type: integer
+      manage_project:
+        description: 管理的项目
+        items:
+          type: string
+        type: array
+      nickname:
+        description: 用户昵称
+        type: string
+      phone:
+        description: 电话号码
+        type: string
+      photo:
+        description: 头像
+        type: string
+      region:
+        description: 地区
+        type: string
+      username:
+        description: 用户名
+        type: string
+    type: object
   services.WebResponse:
     properties:
       errcode:
@@ -542,6 +584,22 @@ paths:
           schema:
             $ref: '#/definitions/services.WebResponse'
       summary: 上传用户头像
+      tags:
+      - 用户管理
+  /user/info:
+    get:
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.UserInfo'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/services.WebResponse'
+      summary: 获取用户信息
       tags:
       - 用户管理
   /user/register:
